CPack: Deprecate OSXX11 and PackageMaker generators
The CPack OSXX11 generator has not had any updates since 2011 (commit 0fb388c7) except as part of sweeping maintenance changes. It also creates packages with a OSXScriptLauncher
binary that has only ppc
and i386
architectures which are not supported by Apple anymore:
$ git grep OSXScriptLauncher
Source/CMakeLists.txt: add_executable(OSXScriptLauncher
Source/CMakeLists.txt: CPack/OSXScriptLauncher.cxx)
Source/CMakeLists.txt: target_link_libraries(OSXScriptLauncher cmsys)
Source/CMakeLists.txt: target_link_libraries(OSXScriptLauncher "-framework CoreFoundation")
Source/CPack/cmCPackOSXX11Generator.cxx: !this->CopyResourcePlistFile("OSXScriptLauncher.rsrc", dir, rsrcFile,
Source/CPack/cmCPackOSXX11Generator.cxx: !this->CopyResourcePlistFile("OSXScriptLauncher", appdir,
$ git ls-files | grep OSXScriptLauncher
Modules/Internal/CPack/CPack.OSXScriptLauncher.in
Modules/Internal/CPack/CPack.OSXScriptLauncher.rsrc.in
Source/CPack/OSXScriptLauncher.cxx
$ file Modules/Internal/CPack/CPack.OSXScriptLauncher.in
Modules/Internal/CPack/CPack.OSXScriptLauncher.in: Mach-O universal binary with 2 architectures: [ppc:Mach-O ppc executable, flags:<NOUNDEFS|DYLDLINK|TWOLEVEL>] [i386:Mach-O i386 executable, flags:<NOUNDEFS|DYLDLINK|TWOLEVEL>]
It is likely that no one has been using this since it does not support the x86_64
architecture used by all modern macOS machines.