Help/release/dev/cpack-deprecate-old-macos-generators.rst
@@ -1,0 +1,5 @@
+cpack-deprecate-old-macos-generators
+------------------------------------
+
+* The :cpack_gen:`CPack PackageMaker Generator` generator has been
+  deprecated because Xcode no longer distributes the PackageMaker tools.
